--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# covers record of installed files built with python3 setup.py install --record installed_files.txt
+installed_files.txt
+
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
